--- a/Cours Git.htm
+++ b/Cours Git.htm
@@ -9,13 +9,6 @@
 </head>
 
 <body>
-Page Cours Version 1 
-Page Cours Version 1
-Page Cours Version 1
-Page Cours Version 1
-Page Cours Version 1
-Page Cours Version 1
-Page Cours Version 1
-
+Page Cours Version 1 pour travailler en equipe
 </body>
 </html>
